=== SVN

* Added checks to Dataset#multi_insert to prevent work if no values are given (#162).

* Override ruby2ruby implementation of Proc#to_sexp which leaks memory (#161).

* Added log option, help for sequel script (#157).

=== 1.1 (2008-02-15)

* Fixed Dataset#join_table to support joining of datasets (#156).

* Changed Dataset#empty? to use EXISTS condition instead of counting records, for much better performance (#158).

* Implemented insertion of multiple records in a single statement for postgres adapter. This feature is available only in postgres 8.2 and newer.

* Implemented Postgres::Database#server_version.

* Implemented Database#get, short for dataset.get(...).

* Refactored Dataset#multi_insert, added #import alias, added support for calling #multi_insert using array of columns and array of value arrays (thanks David Lee).

* Implemented Dataset#get, a replacement for select(column).first[column].

* Implemented Dataset#grep method, poor man's text search.

=== 1.0.10 (2008-02-13)

* Fixed Datset#group_and_count to work inside a query block (#152).

* Changed datasets with transforms to automatically transform hash filters (#155).

* Changed Marshal stock transform to use Base64 encoding with backward-compatibility to support existing marshaled values (#154).

* Added support for inserting multiple records in a single statement using #multi_insert in MySQL adapter (#153).

* Added support for :slice option (same as :commit_every) in Dataset#multi_insert.

* Changed Dataset#all to accept opts and iteration block.

=== 1.0.9 (2008-02-10)

* Implemented Dataset#inspect and Database#inspect (#151).

* Added full-text searching for odbc_mssql adapter (thanks Joseph Love).

* Added AlterTableGenerator#add_full_text_index method.

* Implemented full_text indexing and searching for PostgreSQL adapter (thanks David Lee).

* Implemented full_text indexing and searching for MySQL adapter (thanks David Lee).
